добавил карточки по имени

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>coolSoft</title>
-    <link rel="stylesheet" href="./src/components/card/card.css">
-    <link rel="stylesheet" href="./src/fonts/icomoon/fonts/button/button_icon_style.css">
-    <link rel="stylesheet" href="./src/components/buttons/button.css">
+    <link rel="stylesheet" href="./src/components/card/card.css" />
+    <link
+      rel="stylesheet"
+      href="./src/fonts/icomoon/fonts/button/button_icon_style.css"
+    />
+    <link rel="stylesheet" href="./src/components/buttons/button.css" />
   </head>
   <body>
     <header class="header">
@@ -21,28 +24,12 @@
     </header>
     <main class="main">
       <div class="container-global">
-        <div class="container-cards"></div>
+        <div class="container-cards">
+         
+        </div>
       </div>
     </main>
 
-    <div class="card">
-      <div class="card__title">
-        <div class="card__title-text">Готово</div>
-        <div class="card__title-list">
-          <input type="button" name = "button_card"value = '...' class="">
-        </div>
-      </div>
-      <div class="card__card"></div>
-      <div class="card__footer">
-        <div class="card__footer-button">
-          <button>+ Добавить карточку
-             </button>
-        </div>
-
-      </div>
-    </div>
-
     <script src="/src/app.js"></script>
-
   </body>
 </html>
