--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <span>Trello</span>
         </a>
       </div>
-      <div class="icon-users">users</div>
+      <div class="icon-users">Users</div>
     </header>
     <main class="main">
       <div class="container-global wrapper">
