--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
           <span>Trello</span>
         </a>
       </div>
-      <div class="icon-users">users</div>
+      <div class="users-search__wraper">
+        <div class="icon-users">users</div>
+        <div class="users-template"></div>
+      </div>
     </header>
     <main class="main">
       <div class="container-global wrapper">
