--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       </div>
     </main>
 
-    <script src="/src/app.js"></script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
